manifests/php-ingress.yaml
apiVersion: networking.k8s.io/v1 

kind: Ingress 

metadata: 

  name: php-ingress 

  annotations: 

    konghq.com/strip-path: "true" 

spec: 

  ingressClassName: kong 

  rules: 

  - host: php-app.local 

    http: 

      paths: 

      - path: / 

        pathType: Prefix 

        backend: 

          service: 

            name: php-service 

            port: 

              number: 80 

  tls: 

  - hosts: 

    - php-app.local 

    secretName: kong-tls-secret
